# vem

./: .dockerignore  .env.backend-stack.example  .gitignore  .npmrc  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  oxfmt.config.json  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.node.json  tsconfig.scripts.json  turbo.json  vitest.config.ts
.cargo/: config.toml
.claude/agents/: brainstorm.md  impl.md  iplan.md
.claude/skills/: .gitignore
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: admin-browser-acceptance.yml  build-factory-iso.yml  build-win10-kvm-baseline.yml  build-windows-runtime-artifacts.yml  ci.yml  (+4 more)
apps/lower-controller-sim/: Cargo.toml
apps/lower-controller-sim/src/: lib.rs  main.rs
apps/machine/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/machine/src-tauri/capabilities/: default.json
apps/machine/src-tauri/src/: hardware.rs  lib.rs  local_logs.rs  main.rs  native_audio.rs  native_mqtt.rs  native_touch_keyboard.rs  scanner.rs  serial_protocol.rs  system_touch_keyboard.rs  vision.rs
apps/vending-daemon/: Cargo.toml  package.json  turbo.json
apps/vending-daemon/src/: audio_output.rs  automatic_vent.rs  backend.rs  bring_up.rs  config.rs  device_binding.rs  events.rs  hardware.rs  health.rs  ipc.rs  lib.rs  local_runtime_reset.rs  local_runtime_settings.rs  logs.rs  main.rs  maintenance.rs  mqtt.rs  natural_context.rs  network.rs  platform_fs.rs  provisioning.rs  runtime.rs  runtime_configuration.rs  scanner.rs  secret.rs  service_windows.rs  shutdown.rs  stock_upload.rs  transaction.rs  vision.rs  vision_camera_maintenance.rs
apps/vending-daemon/src/state/: mod.rs  schema.rs  store.rs
apps/vending-daemon/tests/: clean_runtime_configuration.rs  console_startup.rs  ipc_contract.rs  local_runtime_reset.rs  mqtt_fault_recovery.rs  natural_context.rs  payment_code_service_api_runtime.rs  scanner_vision.rs  serial_fulfillment_progress.rs
apps/vending-daemon/tests/support/: mod.rs  mqtt.rs  process.rs  pty.rs  sensitive.rs  sqlite.rs
crates/vending-core/: Cargo.toml  package.json
crates/vending-core/src/: domain.rs  environment.rs  hardware.rs  health.rs  lib.rs  mqtt.rs  scanner.rs  serial.rs  vision.rs
crates/vending-core/tests/: daemon_ipc_migration_guard.rs  scanner_contract.rs  serial_pty.rs
crates/vending-core/tests/support/: mod.rs
docs/: 0529-修改后协议.md  0531-微信小程序调查.md  0603-视觉协议.md  CAMERA_WORKFLOW.md  虚拟试穿代码需求书.md
protocol/: 下位机协议.md  视觉协议.md
public/: admin-api-contract-coverage.md  clean-base-factory-acceptance.md  customer-accessible-kiosk-lockdown.md  factory-manifest-v1.schema.json  factory-personalization-media-v1.schema.json  machine-provisioning-default-api-base-url.md  maintenance-relay-bring-up.md  managed-machine-update.md  near-field-customer-speaker-acceptance.md  physical-stock-attestation-runbook.md  production-pilot-sop.md  protected-fulfillment-drill-mode.md  protected-payment-drill-mode.md  real-payment-refund-recovery-pilot.md  unified-field-delivery.md  v1-operations-whitepaper.md  vision-artifact-attestation-v1.schema.json  vision-conformance-v1.schema.json  vision-release-approval-v1.schema.json  vision-release-bundle.md  vision-release-descriptor-v1.schema.json  vision-release-trust-policy-v1.schema.json  vm-host-adapter-default-audio.md  vm-runtime-acceptance.md  windows-bringup-bundle.md  windows-factory-runtime-and-maintenance.md
scripts/: backend-image-deployment.test.mjs  check-active-runtime-factory-retirement.test.mjs  check-admin-api-contracts.mjs  check-admin-api-contracts.test.mjs  check-admin-contract-e2e-ci.mjs  check-admin-contract-e2e-ci.test.mjs  check-ci-workflow-needs.test.mjs  check-effective-config-hard-migration.mjs  check-effective-config-hard-migration.test.mjs  check-factory-image-acceptance-workflow.test.mjs  check-factory-manifest.test.mjs  check-factory-runtime-prep.mjs  check-github-oidc-automation-workflow.test.mjs  check-machine-customer-payment-copy.mjs  check-machine-customer-payment-copy.test.mjs  check-machine-e2e-ci.test.mjs  check-machine-provisioning-default-api-base-url.mjs  check-machine-vision-deployment.mjs  check-maintenance-relay-runbook.test.mjs  check-maintenance-ssh-ca-secrets.test.mjs  check-managed-machine-update.mjs  check-repository-script-inventory.mjs  check-repository-script-inventory.test.mjs  check-static-quality-workflow.test.mjs  check-vm-runtime-acceptance-workflow.test.mjs  check-windows-bringup-bundle.mjs  check-windows-bringup-bundle.test.mjs  check-windows-factory-maintenance.test.mjs  check-windows-kiosk-lockdown.mjs  check-windows-oobe-registry.test.mjs  deploy-backend-stack.mjs  publish-backend-images.mjs
tools/: check-ci.mjs  check-format.mjs
(+931 files in other folders)
