[package]
name = "lower-controller-sim"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vending-core = { path = "../../crates/vending-core" }
clap = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
tokio-serial.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "term"] }
