[package]
name = "vending-daemon"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vending-core = { path = "../../crates/vending-core" }
daemon-ipc-contracts = { path = "../../crates/daemon-ipc-contracts" }
async-trait.workspace = true
axum = { version = "0.7", features = ["ws"] }
base64.workspace = true
chrono.workspace = true
getrandom.workspace = true
hmac.workspace = true
keyring.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-serial.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
uuid.workspace = true
futures-util.workspace = true
zip.workspace = true
clap = { version = "4", features = ["derive", "env"] }
rumqttc = { version = "0.24", features = ["use-rustls"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "uuid",
  "json",
] }
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
assert_cmd = "2"
config = "0.14"
nix = { version = "0.29", features = ["fs", "term"] }
portpicker = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rumqttd = "0.20"
tempfile = "3"
tokio-tungstenite.workspace = true
wiremock = "0.6"
tower = "0.5"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_WiFi",
  "Win32_Security_Cryptography",
] }
