[package]
name = "vending-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-serial.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
futures-util.workspace = true

[dev-dependencies]
nix = { version = "0.29", features = ["fs", "term"] }
